--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: deploy to s3
         uses: jakejarvis/s3-sync-action@master
         with:
-          args: --delete
+          args: --delete --exact-timestamps
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
